--- a/style.css
+++ b/style.css
@@ -11,22 +11,20 @@
 
 .profile-container{
     padding: 30px 70px 90px 70px;
-    width: 80%;
     margin: auto;
-    
+    width: 80%;    
 }
 .profile{
-    margin: 40px;
+    margin: 20px;
     text-align: center;
     width: 40%;
     display: inline-block;
 }
-
 .image{
     border-radius:20%;
+    padding: 5px;
+    background-color: #b56576;
 }
-
-
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #FFCDB2; 
@@ -39,10 +37,14 @@ h4{
     color:#1a535c;
     line-height: 8px;   
 }
-ul{
+.lists{
     text-align: left;
     padding-left:60px;
     font-size: 18px;
+}
+
+.lists li:nth-of-type(2n+1){
+    font-style: italic;
 }
 
 .buttom{
@@ -63,5 +65,4 @@ ul{
 
 html {
     scroll-behavior: smooth;
-    } 
-
+} 
