--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .name {
     text-align: center; 
     font-size: 25px;
@@ -7,12 +12,17 @@
     text-align: center; 
     font-size: 17px;    
     line-height: 20px;
-    } 
+    background-color: honeydew;
+    background-position: 50% 25%;
+    padding: 10px;
+} 
+
 
 .profile-container{
-    padding: 30px 70px 90px 70px;
+    padding: 30px 70px 90px 30px;
     margin: auto;
     width: 80%;    
+    
 }
 .profile{
     margin: 20px;
@@ -21,9 +31,18 @@
     display: inline-block;
 }
 .image{
-    border-radius:20%;
+    border-radius:25%;
     padding: 5px;
-    background-color: #b56576;
+    background-color: white;
+}
+
+.trybe{
+    text-decoration: none;
+    font-family:'Patrick hand', sans-serif;
+    font-weight: 700;
+    color: white;
+    font-size: 20px;
+    
 }
 body {
     font-family: 'Montserrat', sans-serif;
