--- a/style.css
+++ b/style.css
@@ -2,24 +2,36 @@
     margin: 0;
     padding: 0;
 }
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #FFCDB2; 
+    background-image: linear-gradient(315deg, #FFCDB2 0%, #e5989b 74%);
+}
+
+.buttom-menu{
+    text-align: center; 
+    background-color: honeydew;
+    background-position: 50% 25%;
+    padding: 15px;
+} 
+.buttom{
+    text-align: center ;
+    background-color:#b5838d ;
+    color:ivory;
+    padding: 10px;
+    border-radius: 10px;
+    font-weight: 700;
+    text-decoration: none;    
+}
 
 .name {
     text-align: center; 
     font-size: 25px;
     color: #6D6875;    
 }
-.buttom-menu{
-    text-align: center; 
-    font-size: 17px;    
-    line-height: 20px;
-    background-color: honeydew;
-    background-position: 50% 25%;
-    padding: 10px;
-} 
-
 
 .profile-container{
-    padding: 30px 70px 90px 30px;
+    padding: 30px 70px 60px 30px;
     margin: auto;
     width: 80%;    
     
@@ -44,17 +56,13 @@
     font-size: 20px;
     
 }
-body {
-    font-family: 'Montserrat', sans-serif;
-    background-color: #FFCDB2; 
-    background-image: linear-gradient(315deg, #FFCDB2 0%, #e5989b 74%);
-}
+
 h4{
     font-size: 24px;
     text-align: left;
     padding-left:20px;
-    color:#1a535c;
-    line-height: 8px;   
+    color:#6D6875;
+    line-height: 40px;   
 }
 .lists{
     text-align: left;
@@ -66,22 +74,20 @@ h4{
     font-style: italic;
 }
 
-.buttom{
-    text-align: center ;
-    background-color:#b5838d ;
-    color:ivory;
+
+
+.social_media {
+    text-align: center;   
+}
+.social_media a{
     padding: 10px;
+}
+
+.icones {
     text-align: center;
-    border-radius: 10px;
-    font-weight: 700;
-    text-decoration: none;
-    line-height: 25px;    
+    padding-top: 15px;
+    padding-bottom: 30px;
 }
-
-.social_media{
-    padding: 10px;
-}
-
 html {
     scroll-behavior: smooth;
 } 
