Adicionando os projetos realizados ao portfolio

--- a/style.css
+++ b/style.css
@@ -89,8 +89,17 @@ body {
     justify-content: center;
     font-size: 24px;
     color:#6D6875;
-    line-height: 40px;
-   
+    line-height: 40px; 
+}
+.content li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.content li a:hover {
+    background-color:#b5838d;
+    border-radius: 3px;
+    padding: 1px;
 }
 
 .content ul {
@@ -106,9 +115,11 @@ body {
     text-align: center;   
     padding-top: 20px;
 }
+
 .social_media a{
     padding: 10px;
 }
+
 .icones {
     text-align: center;
     padding-top: 15px;
@@ -117,7 +128,3 @@ body {
 html {
     scroll-behavior: smooth;
 } 
-
-#projects {
-    text-decoration: none;
-}
